<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>SJ_hw</name>
  <version>0.0.0</version>
  <description>A hardware interface of DaMiao Motor</description>
  <maintainer email="yerik5827@gmail.com">yerik</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_manager</depend> 
  <depend>rclcpp_components</depend> 
  <!-- <depend>serial</depend> 需要自行下载 -->
  <depend>dm_common</depend> 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/dm_hw_plugins.xml"/> <!-- 定义一个插件描述文件 -->
  </export>

</package>
